--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-simple-typewriter": "^5.0.1",
+    "react-skills": "^1.27.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
